[package]
name = "wetdirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["json"] }
tokio = {version = "1.24.1", features = ["full"]}
tower = "0.4.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.92"
reqwest = { version = "0.11.14", features = ["json"]}
thiserror = "1.0.38"
base64 = "0.21.0"
once_cell = "1.17.0"
sha3 = "0.10.6"
rand = "0.8.5"
argon2 = "0.4.1"
